--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion '23.0.0'
-
     defaultConfig {
-        applicationId "com.example.yuan.map4loud"
-        minSdkVersion 15
+        applicationId 'edu.njit.map4noise'
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -16,6 +15,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 
@@ -37,6 +38,24 @@ dependencies {
     compile 'com.sothree.slidinguppanel:library:3.2.0'
 }
 
+dependencies {
+    compile 'com.google.android.gms:play-services-ads:8.3.0'
+}
+dependencies {
+    compile 'com.google.android.gms:play-services-identity:8.3.0'
+}
+dependencies {
+    compile 'com.google.android.gms:play-services-gcm:8.3.0'
+}
+dependencies {
+    compile 'com.google.android.gms:play-services-ads:8.3.0'
+}
+dependencies {
+    compile 'com.google.android.gms:play-services-identity:8.3.0'
+}
+dependencies {
+    compile 'com.google.android.gms:play-services-gcm:8.3.0'
+}
 dependencies {
     compile 'com.google.android.gms:play-services-ads:8.3.0'
 }
