--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.yuan.map4loud" >
+    package="com.example.yuan.map4noise" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
@@ -29,7 +29,7 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name="com.example.yuan.activities.Login"
+            android:name="edu.njit.map4noise.activities.Login"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,15 +37,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.yuan.activities.Register"
+            android:name="edu.njit.map4noise.activities.Register"
             android:label="@string/title_activity_register" >
         </activity>
         <activity
-            android:name="com.example.yuan.activities.SoundMap"
+            android:name="edu.njit.map4noise.activities.SoundMap"
             android:label="@string/title_activity_maps" >
         </activity>
         <service
-            android:name="com.example.yuan.services.Audient"
+            android:name="edu.njit.map4noise.services.Audient"
             android:enabled="true"
             android:exported="true" >
         </service>
